python-compiler/tests/snapshots/control_flow__comparison_operators.snap
---
source: tests/control_flow.rs
expression: compile_source(source)
---
; ModuleID = 'main'
source_filename = "main"

@float_format_string.11 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  %printf_float = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string.11, double 1.000000e+00)
  %printf_float81 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string.11, double 0.000000e+00)
  %printf_float140 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string.11, double 0.000000e+00)
  %printf_float199 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string.11, double 1.000000e+00)
  %printf_float258 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string.11, double 0.000000e+00)
  ret i32 0
}

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #0

attributes #0 = { nofree nounwind }
