python-compiler/tests/snapshots/control_flow__if_else_statement.snap
---
source: tests/control_flow.rs
expression: compile_source(source)
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@int_format_string.1 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.2 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string.3 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  %x = alloca i64, align 8
  store i64 9221120237041090563, ptr %x, align 4
  %x1 = load i64, ptr %x, align 4
  %check_qnan = and i64 %x1, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %x1 to double
  %extract_payload = and i64 %x1, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float, double %i64_to_f64, double %payload_to_f64
  %cmptmp = fcmp ogt double %final_payload, 5.000000e+00
  %bool_payload = zext i1 %cmptmp to i64
  %pyobject_bool = or i64 9221401712017801216, %bool_payload
  %check_qnan2 = and i64 %pyobject_bool, 9221120237041090560
  %is_float3 = icmp ne i64 %check_qnan2, 9221120237041090560
  %i64_to_f644 = bitcast i64 %pyobject_bool to double
  %extract_payload5 = and i64 %pyobject_bool, 281474976710655
  %sign_bit6 = lshr i64 %extract_payload5, 47
  %is_negative7 = icmp eq i64 %sign_bit6, 1
  %sign_extend8 = or i64 %extract_payload5, -281474976710656
  %signed_payload9 = select i1 %is_negative7, i64 %sign_extend8, i64 %extract_payload5
  %payload_to_f6410 = sitofp i64 %signed_payload9 to double
  %final_payload11 = select i1 %is_float3, double %i64_to_f644, double %payload_to_f6410
  %to_bool = fcmp one double %final_payload11, 0.000000e+00
  br i1 %to_bool, label %then, label %else

then:                                             ; preds = %entry
  br i1 false, label %print_string, label %check_int

else:                                             ; preds = %entry
  br i1 false, label %print_string15, label %check_int12

ifcont:                                           ; preds = %print_end16, %print_end
  ret i32 0

check_int:                                        ; preds = %then
  br i1 true, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 1)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_string, double 1.000000e+00)
  br label %print_end

print_string:                                     ; preds = %then
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr inttoptr (i64 1 to ptr))
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  br label %ifcont

check_int12:                                      ; preds = %else
  br i1 true, label %print_int13, label %print_float14

print_int13:                                      ; preds = %check_int12
  %printf_int17 = call i32 (ptr, ...) @printf(ptr @int_format_string.1, i64 0)
  br label %print_end16

print_float14:                                    ; preds = %check_int12
  %printf_float18 = call i32 (ptr, ...) @printf(ptr @float_format_string.2, double 0.000000e+00)
  br label %print_end16

print_string15:                                   ; preds = %else
  %printf_string19 = call i32 (ptr, ...) @printf(ptr @string_format_string.3, ptr null)
  br label %print_end16

print_end16:                                      ; preds = %print_string15, %print_float14, %print_int13
  br label %ifcont
}

declare i32 @printf(ptr, ...)
